--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -11,5 +11,8 @@
 <h3>Exercices</h3>
 <p>Lire le Readme.md de votre Repository GitHub pur obtenir les consignes de vos exercices.</p>
 <p>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
+<p>
+        Pour vous connecter, cliquez <a href="{{ url_for('formulaire') }}">ici</a> pour accéder au formulaire de connexion.
+</p>
 </body>
 </html>
